[ feat ] : added windows compatibility

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@
 
 # MAVLink Communication
 pymavlink>=2.4.0
+pyserial>=3.5  # Required for Windows COM port detection
 
 # Geodetic Calculations
 shapely>=2.0.0
